# vadiyaaAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  clinical_reference.py  docker-compose.prod.yml  docker-compose.yml  dump.rdb  fix_classifier_accuracy.py  fix_image_analysis.py  fix_ocr_column_parser.py  fix_rag_panel_filter.py  fix_who_ingest_dimensions.py  ingest_radiology_kb.py  pyproject.toml  requirements.txt  test_xgb.py  tharigha_to_predict.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a0a0a0a0a0a_initial.py  3cfb1013424a_add_updated_models_with_missing_fields.py  50c7529f111b_add_updated_models_with_missing_fields.py  5c951e5afb00_add_missing_claim_columns.py  6d0f7c9b2a11_add_qr_access_tables.py  7a1b2c3d4e5f_add_users_table.py  8b2c3d4e5f6a_add_role_and_refresh_tokens.py  9c3d4e5f6a7b_add_audit_logs_table.py
app/: __init__.py  config.py  main.py  pipeline.py
app/api/v1/: router.py
app/core/: auth.py  celery.py  config.py  db.py  disclaimer.py  errors.py  file_storage.py  file_validator.py  logging.py  middleware.py
app/db/: base.py  base_class.py  session.py
app/image_pipeline/: __init__.py  classifier.py  classifier_v2.py  gradcam.py  pipeline.py  quality_gate.py  roi_extractor.py  schemas.py  segmentor.py
app/ml/: ml_prediction_engine.py  predictor.py
app/ml/anomaly/: __init__.py  lab_flagger.py
app/ml/audit/: __init__.py  bias_audit.py  (+2 more)
app/models/: async_job.py  audit_log.py  claim.py  image_analysis.py  models.py  patient.py  qr_access.py  refresh_token.py  report.py  request_models.py  user.py
app/rag/: __init__.py  reasoner.py  retriever.py
app/routes/: __init__.py  auth.py  claims.py  images.py  jobs.py  patient_history_routes.py  pdf_reports.py  qr_reports.py  reports.py  text_routes.py  websocket_routes.py
app/schemas/: claim.py  common.py  image.py  job.py  patient.py  report.py  schemas.py
app/services/: claim_service.py  clinical_ner_service.py  clinicalbert.py  clinicalbert_service.py  differential_diagnosis.py  ensemble_predictor.py  file_upload.py  fix_image_analysis.py  image_analysis_service.py  image_service.py  ingest_radiology_kb.py  ingest_urinalysis_kb.py  ingest_who_imaging_standards.py  ingest_who_multimodal_criteria.py  ingest_who_pathology_standards.py  lab_report_column_parser.py  ml_predictor.py  ml_service.py  modality_classifier.py  ocr.py  ocr_service.py  patient_history_service.py  pdf_report.py  pipeline_controller.py  preprocessor.py  qr_service.py  radiology_knowledge_base.py  rag_notebook.py  rag_panel_filter.py  rag_pipeline.py  rag_service.py  report_service.py  speed_optimizations.py  urinalysis_knowledge_base.py  yolo_detector.py
app/tasks/: __init__.py  claim_tasks.py  image_tasks.py  report_tasks.py
app/utils/: __init__.py  confidence.py  file_handler.py  job_utils.py  retry.py  validators.py
app/workers/: batch_worker.py  celery_app.py  claim_tasks.py  db_persist.py  image_tasks.py  job_status.py  pipeline_tasks.py  report_tasks.py  tasks.py  tasks_ml.py  tasks_rag.py
chromadb_store/: chroma.sqlite3
docs/architecture/: vaidyaai_workflow_prediction_layer_export.html
load-tests/: locustfile.py
scratch/: smoke_test_pipeline.py
stitch_vaidyaai_clinical_analysis_suite/stitch_vaidyaai_clinical_analysis_suite/: VAIDYAA AI.html  claim-verifier.jsx  dashboard.jsx  image-analysis.jsx  index.html  job-tracker.jsx  report-analyzer.jsx  shared.jsx
tests/: test_auth.py  test_e2e.py  test_errors.py  test_file_validator.py  test_pipelines.py  test_rag_integration.py  test_retry.py
tools/dev-scripts/: fix_classifier_accuracy.py  fix_image_analysis.py  fix_ocr_column_parser.py  fix_rag_panel_filter.py  fix_who_ingest_dimensions.py  patch_nav.py  test_shap.py
ui/: VAIDYAA AI.html  VAIDYAAI.html  claim-verifier.jsx  dashboard.jsx  image-analysis.jsx  index.html  report-analyzer.jsx  report-preview.html  report-qr-widget.jsx
workers/: __init__.py  celery_app.py
(+55 files in other folders)
