[project]
name = "vaidya-ai"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "celery[redis]",
    "pydantic-settings",
    "python-multipart",
    "qrcode[pil]",
    "python-jose",
    "paddlepaddle",
    "paddleocr",
    "reportlab",
    "httpx",
    "groq",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
